sync/patches/kustomize/patches/patch-deployment-healthz-port.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capmox-controller-manager
  namespace: capmox-system
spec:
  template:
    spec:
      containers:
        - name: manager
          ports:
            - containerPort: 8081
              name: healthz
              protocol: TCP
