sync/patches/kustomize/patches/add-ciliumnetworkpolicy-capmox-controller-manager.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  labels:
    cluster.x-k8s.io/provider: infrastructure-proxmox
    control-plane: controller-manager
  name: capmox-controller-manager
spec:
  endpointSelector:
    matchLabels:
      cluster.x-k8s.io/provider: infrastructure-proxmox
      control-plane: controller-manager
  egress:
    - toEntities:
        - kube-apiserver
  ingress:  # for webhooks
    - fromEntities:
      - cluster  # Even though it's a kube-apiserver pod running in host network it doesn't work without "cluster"
      - kube-apiserver
